# final-project-c-

./: CMakeLists.txt  README.md  main.cpp
lib/include/: ProcessImage.h
lib/src/: ProcessImage.cpp
